force-app/main/default/objects/Lead/fields/Athletic_Director__c.field-meta.xml
<CustomField>
    <fullName>Athletic_Director__c</fullName>
    <description>Athletic Director for the College</description>
    <inlineHelpText>Athletic Director for the College.</inlineHelpText>
    <label>Athletic Director</label>
    <length>100</length>
    <type>Text</type>
</CustomField>