force-app/main/default/objects/Lead/fields/Club_Name__c.field-meta.xml
<CustomField>
    <fullName>Club_Name__c</fullName>
    <description>Club Name (Optional, if different from College Name)</description>
    <inlineHelpText>Club Name (Optional, if different from College Name)</inlineHelpText>
    <label>Club Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>