force-app/main/default/objects/Lead/fields/Invoice_Email_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Email_Recipient__c</fullName>
    <description>Invoice Email Recipient</description>
    <inlineHelpText>Invoice Email Recipient</inlineHelpText>
    <label>Invoice Email Recipient</label>
    <type>Email</type>
</CustomField>