force-app/main/default/objects/Lead/fields/Mens_Club__c.field-meta.xml
<CustomField>
    <fullName>Mens_Club__c</fullName>
    <description>Number of Teams entered for Men&apos;s Club</description>
    <inlineHelpText>Number of Teams entered for Men&apos;s Club</inlineHelpText>
    <label>Men&apos;s Club</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>