force-app/main/default/objects/Lead/fields/Mens_Social__c.field-meta.xml
<CustomField>
    <fullName>Mens_Social__c</fullName>
    <description>Number of Teams entered for Men&apos;s Social</description>
    <label>Men&apos;s Social</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>