force-app/main/default/objects/Lead/fields/Tournament_Newsletter__c.field-meta.xml
<CustomField>
    <fullName>Tournament_Newsletter__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Would they like to sign up for our tournament newsletter?</description>
    <inlineHelpText>Would they like to sign up for our tournament newsletter?</inlineHelpText>
    <label>Tournament Newsletter?</label>
    <type>Checkbox</type>
</CustomField>