force-app/main/default/objects/Lead/fields/Womens_Club__c.field-meta.xml
<CustomField>
    <fullName>Womens_Club__c</fullName>
    <description>Number teams entering Women&apos;s Club</description>
    <label>Women&apos;s Club</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>