force-app/main/default/objects/Lead/fields/Womens_College__c.field-meta.xml
<CustomField>
    <fullName>Womens_College__c</fullName>
    <description>Number of Women&apos;s College teams entered</description>
    <label>Women&apos;s College</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>