force-app/main/default/objects/Lead/recordTypes/Tournament_Lead.recordType-meta.xml
<RecordType>
    <fullName>Tournament_Lead</fullName>
    <active>true</active>
    <businessProcess>Tournament Lead</businessProcess>
    <label>Tournament Lead</label>
</RecordType>